--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -616,13 +616,17 @@ select.ui.dropdown {
         .ui.ui.selection.dropdown@{notInverted}:has(> input:focus) {
             border-color: @selectionFocusBorderColor;
             box-shadow: none;
-            & > i.icon {
+            & > i.icon:not(.remove) {
                 opacity: @selectionIconFocusOpacity;
             }
         }
     }
-    .ui.ui.selection.dropdown:focus > i.icon {
-        opacity: @selectionIconFocusOpacity;
+    .ui.ui.selection.dropdown {
+        &:focus, &:has(> input:focus) {
+            & > i.icon:not(.remove) {
+                opacity: @selectionIconFocusOpacity;
+            }
+        }
     }
 
     /* Visible */
